# MAVSDK

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
.ccls-cache/@@home@nuno@Client_Projects@Auterion@MAVSDK/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@9@array.blob  @usr@include@c++@9@atomic.blob  @usr@include@c++@9@backward@auto_ptr.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocated_ptr.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@atomic_base.h.blob  @usr@include@c++@9@bits@atomic_futex.h.blob  @usr@include@c++@9@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@deque.tcc.blob  @usr@include@c++@9@bits@erase_if.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@hashtable.h.blob  @usr@include@c++@9@bits@hashtable_policy.h.blob  @usr@include@c++@9@bits@invoke.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  @usr@include@c++@9@bits@locale_classes.h.blob  @usr@include@c++@9@bits@locale_classes.tcc.blob  @usr@include@c++@9@bits@locale_facets.h.blob  @usr@include@c++@9@bits@locale_facets.tcc.blob  (+393 more)
.ccls-cache/@home@nuno@Client_Projects@Auterion@MAVSDK/: src@core@deprecated.h.blob  src@core@global_include.h.blob  src@core@locked_queue.h.blob  src@core@log.h.blob  src@core@mavlink_address.h.blob  src@core@mavlink_commands.cpp.blob  src@core@mavlink_commands.h  src@core@mavlink_commands.h.blob  src@core@mavlink_include.h.blob  src@core@mavlink_message_handler.h.blob  src@core@mavlink_mission_transfer.h.blob  src@core@mavlink_parameters.h.blob  src@core@ping.h.blob  (+6 more)
docker/: Dockerfile-Ubuntu-20.04-APX4-SITL-develop  Dockerfile-Ubuntu-20.04-APX4-SITL-v2.1  Dockerfile-Ubuntu-20.04-APX4-SITL-v2.2  Dockerfile-Ubuntu-20.04-APX4-SITL-v2.3  build_and_push_auterion_docker_images.sh  build_and_push_docker_images.sh
src/: plugins.txt
src/mavsdk/plugins/custom_action/: CMakeLists.txt  custom_action.cpp  custom_action_impl.cpp  custom_action_impl.h
src/mavsdk/plugins/custom_action/include/plugins/custom_action/: custom_action.h
src/mavsdk/plugins/obstacle_avoidance/: CMakeLists.txt  obstacle_avoidance.cpp  obstacle_avoidance_impl.cpp  obstacle_avoidance_impl.h
src/mavsdk/plugins/obstacle_avoidance/include/plugins/obstacle_avoidance/: obstacle_avoidance.h
src/mavsdk/plugins/obstacle_avoidance_server/: CMakeLists.txt  obstacle_avoidance_server.cpp  obstacle_avoidance_server_impl.h
src/mavsdk/plugins/obstacle_avoidance_server/include/plugins/obstacle_avoidance_server/: obstacle_avoidance_server.h
src/plugins/obstacle_avoidance/: CMakeLists.txt  obstacle_avoidance.cpp  obstacle_avoidance_impl.cpp  obstacle_avoidance_impl.h
src/plugins/obstacle_avoidance/include/plugins/obstacle_avoidance/: obstacle_avoidance.h
src/plugins/wifi/: CMakeLists.txt  wifi.cpp  wifi_impl.cpp  wifi_impl.h
src/plugins/wifi/include/plugins/wifi/: wifi.h
tools/: generate_debian_changelog.sh  generate_from_protos.sh  generate_mavlink_headers.sh  run-sitl-tests.sh  start_px4_sitl.sh
(+138 files in other folders)
